docs/build/identity.rs/v0.6.0/docs/introduction.mdx
---
description: The most important concepts that developers will need to know to utilize IOTA Identity to its full potential.
image: /img/Identity_icon.png
keywords:
  - Identity
  - guide
  - TOC
  - overview
  - reference
---

import Announcement from '../src/partials/_announcement.mdx';

# IOTA Identity Framework Guide

<Announcement />

![IOTA Identity](/img/Banner/banner_identity.svg)

The IOTA Identity framework implements the most common standards and patterns for Decentralized Identity in both a DLT agnostic and `iota` method specification manner. It is designed to work for Identity for People, Organizations, Things, and Objects acting as a unifying-layer of trust between everyone and everything.

In this guide, we will go through the most important concepts that developers will need to know to utilize IOTA Identity to its full potential.

## Overview

### [Chapter 1: Decentralized Identity](./decentralized_identity.mdx)

Describes the concept of Decentralized or Self-Sovereign Identities (SSI), how it applies to People, Organizations and Things, and why IOTA is used.

### [Chapter 2: Getting Started](./getting_started/overview.mdx)

Gives a quick overview of how to install the library and creating your first DID.

### Chapter 3: Concepts

Describes relevant concepts of SSI and how to utilize them in the library.

### [Chapter 3.1: Decentralized Identifiers (DID)](./concepts/decentralized_identifiers/overview.mdx)

Explains the DID standard from W3C and how to manipulate DID Documents.

### [Chapter 3.2: Verifiable Credentials (VC)](./concepts/verifiable_credentials/overview.mdx)

Explains the VC standard from W3C, how to create and revoke VCs, and how to use Verifiable Presentations.

### [Chapter 3.3: Advanced Concepts](./concepts/advanced/overview.mdx)

This chapter is meant for those that want to push the IOTA Identity framework to its limits, utilizing the more complex, yet more flexible lower-level libraries, allowing developers to optimize their implementation, take control over storage/security, and add features to the framework.

### [Chapter 4: Programming Languages](./libraries/overview.mdx)

While the framework itself is developed in the Rust programming language, we also provide bindings, or "Foreign Function Interfaces" (FFI), to other languages. These will have separate getting started sections, making the rest of the guide language agnostic, focusing on the conceptual level.

### [Chapter 5: Tutorials](./tutorials/overview.mdx)

Contains end-to-end examples using the library to achieve common use-cases.

### [Chapter 6: Specification](./specs/overview.mdx)

While IOTA Identity implements many existing standards, it also adds some additional features we would like to standardize ourselves. This chapter covers these features and how they work in great detail. These are not light reads and can be skipped.

### [Chapter 7: Glossary](./glossary.mdx)

A list of all terminology used in this guide, the framework, and all materials surrounding it.

### [Chapter 8: Contribute](./contribute.mdx)

A simple guide on how to contribute to the framework.

### [Chapter 9: Workflow](./workflow.mdx)

An overview of the workflow to design, develop and release the framework.

### [Chapter 10: Contact](./contact.mdx)

How to contact the maintainers.

### [Chapter 11: FAQ](./faq.mdx)

Overview of the most Frequently Asked Questions and their answers.
